--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -1,3 +1,9 @@
+qof (0.7.1-2) unstable; urgency=low
+
+  * Fix priority setting of the two new backend packages. 
+
+ -- Neil Williams <linux@codehelp.co.uk>  Tue, 12 Sep 2006 00:12:46 +0100
+
 qof (0.7.1-1) unstable; urgency=low
 
   * New upstream release. 
