--- a/qof/po/en_GB.po
+++ b/qof/po/en_GB.po
@@ -1,27 +1,26 @@
 # English-GB for QOF
-# Copyright (C) 2005,2006 Neil Williams <linux@codehelp.co.uk>
-# This file is distributed under the same license as the qof package.
-# Neil Williams <linux@codehelp.co.uk>, 2005.
+# Copyright (C) 2005 Neil Williams <linux@codehelp.co.uk>
+# This file is distributed under the same license as the QOF package.
+# Neil Williams <linx@codehelp.co.uk>, 2005.
 # 
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: QOF 0.7.0\n"
+"Project-Id-Version: QOF 0.8.0\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2006-08-29 09:19+0100\n"
-"PO-Revision-Date: 2006-07-14 22:59+0100\n"
+"POT-Creation-Date: 2006-09-12 01:18+0100\n"
+"PO-Revision-Date: 2006-09-12 01:18+0100\n"
 "Last-Translator: Neil Williams <linux@codehelp.co.uk>\n"
 "Language-Team: English (British) <en_gb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
+"Content-Transfer-Encoding: 8bit"
 
-#: ../backend/file/qsf-backend.c:117
+#: ../backend/file/qsf-backend.c:118
 msgid "Level of compression to use: 0 for none, 9 for highest."
 msgstr "Level of compression to use: 0 for none, 9 for highest."
 
-#: ../backend/file/qsf-backend.c:119
+#: ../backend/file/qsf-backend.c:120
 msgid ""
 "QOF can compress QSF XML files using gzip. Note that compression is not used "
 "when outputting to STDOUT."
@@ -29,11 +28,11 @@ msgstr ""
 "QOF can compress QSF XML files using gzip. Note that compression is not used "
 "when outputting to STDOUT."
 
-#: ../backend/file/qsf-backend.c:129
+#: ../backend/file/qsf-backend.c:130
 msgid "List of QSF map files to use for this session."
 msgstr "List of QSF map files to use for this session."
 
-#: ../backend/file/qsf-backend.c:131
+#: ../backend/file/qsf-backend.c:132
 msgid ""
 "QOF can convert objects within QSF XML files using a map of the changes "
 "required."
@@ -41,11 +40,11 @@ msgstr ""
 "QOF can convert objects within QSF XML files using a map of the changes "
 "required."
 
-#: ../backend/file/qsf-backend.c:140
+#: ../backend/file/qsf-backend.c:141
 msgid "Encoding string to use when writing the XML file."
 msgstr "Encoding string to use when writing the XML file."
 
-#: ../backend/file/qsf-backend.c:142
+#: ../backend/file/qsf-backend.c:143
 msgid ""
 "QSF defaults to UTF-8. Other encodings are supported by passing the encoding "
 "string in this option."
@@ -53,11 +52,11 @@ msgstr ""
 "QSF defaults to UTF-8. Other encodings are supported by passing the encoding "
 "string in this option."
 
-#: ../backend/file/qsf-backend.c:151
+#: ../backend/file/qsf-backend.c:152
 msgid "Convert deprecated date values to time values."
 msgstr "Convert deprecated date values to time values."
 
-#: ../backend/file/qsf-backend.c:153
+#: ../backend/file/qsf-backend.c:154
 msgid ""
 "Applications that support the new QOF time format need to enable this option "
 "to convert older date values into time. Applications that still use date "
@@ -66,3 +65,101 @@ msgstr ""
 "Applications that support the new QOF time format need to enable this option "
 "to convert older date values into time. Applications that still use date "
 "should not set this option until time values are supported."
+
+#: ../backend/file/qsf-backend.c:1453
+#, c-format
+msgid ""
+"The selected QSF object file '%s' contains one or more invalid GUIDs. The "
+"file cannot be processed - please check the source of the file and try again."
+msgstr ""
+"The selected QSF object file '%s' contains one or more invalid GUIDs. The "
+"file cannot be processed - please check the source of the file and try again."
+
+#: ../backend/file/qsf-backend.c:1585
+#, c-format
+msgid ""
+"The selected QSF object file '%s' contains one or more invalid 'collect' "
+"values. The file cannot be processed - please check the source of the file "
+"and try again."
+msgstr ""
+"The selected QSF object file '%s' contains one or more invalid 'collect' "
+"values. The file cannot be processed - please check the source of the file "
+"and try again."
+
+#: ../backend/file/qsf-xml-map.c:345
+msgid ""
+"Invalid QSF Map file! The QSF map file failed to validate against the QSF "
+"map schema. The XML structure of the file is either not well-formed or the "
+"file contains illegal data."
+msgstr ""
+"Invalid QSF Map file! The QSF map file failed to validate against the QSF "
+"map schema. The XML structure of the file is either not well-formed or the "
+"file contains illegal data."
+
+#: ../backend/file/qsf-xml-map.c:508
+#, c-format
+msgid ""
+"The QSF Map file '%s' was written for a different version of QOF. It may "
+"need to be modified to work with your current QOF installation."
+msgstr ""
+"The QSF Map file '%s' was written for a different version of QOF. It may "
+"need to be modified to work with your current QOF installation."
+
+#: ../backend/gda/qof-gda.c:203
+#, c-format
+msgid "GDA Provider '%s' could not be found"
+msgstr "GDA Provider '%s' could not be found"
+
+#: ../backend/gda/qof-gda.c:241
+msgid "GDA: No data source path specified."
+msgstr "GDA: No data source path specified."
+
+#: ../backend/gda/qof-gda.c:258
+msgid "GDA: Unable to locate your home directory."
+msgstr "GDA: Unable to locate your home directory."
+
+#: ../backend/gda/qof-gda.c:268
+msgid "GDA: Unable to create a .libgda directory within your home directory."
+msgstr "GDA: Unable to create a .libgda directory within your home directory."
+
+#: ../backend/gda/qof-gda.c:304
+#, c-format
+msgid "GDA encountered an error '%s' using data source '%s'."
+msgstr "GDA encountered an error '%s' using data source '%s'."
+
+#: ../backend/gda/qof-gda.c:477
+msgid "Name of the database to use."
+msgstr "Name of the database to use."
+
+#: ../backend/gda/qof-gda.c:479
+msgid "Override the default database name with a name of your own choice."
+msgstr "Override the default database name with a name of your own choice."
+
+#: ../backend/gda/qof-gda.c:488
+msgid "The username to use to access this data source."
+msgstr "The username to use to access this data source."
+
+#: ../backend/gda/qof-gda.c:490
+msgid ""
+"The username specified in the configuration of this data source that "
+"provides write access to the data."
+msgstr ""
+"The username specified in the configuration of this data source that "
+"provides write access to the data."
+
+#: ../backend/gda/qof-gda.c:499
+msgid "Password to use with the username."
+msgstr "Password to use with the username."
+
+#: ../backend/gda/qof-gda.c:501
+msgid "The password that is to be used with the specified username."
+msgstr "The password that is to be used with the specified username."
+
+#: ../backend/gda/qof-gda.c:510
+msgid "Name of this data source."
+msgstr "Name of this data source."
+
+#: ../backend/gda/qof-gda.c:512
+msgid "The name of this data source as specified in the GDA configuration."
+msgstr "The name of this data source as specified in the GDA configuration."
+
