--- a/qof/po/en_GB.po
+++ b/qof/po/en_GB.po
@@ -8,13 +8,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: QOF 0.8.0\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2006-09-12 01:18+0100\n"
-"PO-Revision-Date: 2006-09-12 01:18+0100\n"
+"POT-Creation-Date: 2006-09-12 16:57+0100\n"
+"PO-Revision-Date: 2006-09-12 16:18+0100\n"
 "Last-Translator: Neil Williams <linux@codehelp.co.uk>\n"
 "Language-Team: English (British) <en_gb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: ../backend/file/qsf-backend.c:118
 msgid "Level of compression to use: 0 for none, 9 for highest."
@@ -66,7 +66,68 @@ msgstr ""
 "to convert older date values into time. Applications that still use date "
 "should not set this option until time values are supported."
 
-#: ../backend/file/qsf-backend.c:1453
+#: ../backend/file/qsf-backend.c:252
+#, c-format
+msgid ""
+"The selected QSF Object file '%s' requires a map but it was not provided."
+msgstr ""
+"The selected QSF Object file '%s' requires a map but it was not provided."
+
+#: ../backend/file/qsf-backend.c:255
+#, c-format
+msgid ""
+"When converting XML strings into numbers, an overflow has been detected. The "
+"QSF object file '%s' contains invalid data in a field that is meant to hold "
+"a number."
+msgstr ""
+"When converting XML strings into numbers, an overflow has been detected. The "
+"QSF object file '%s' contains invalid data in a field that is meant to hold "
+"a number."
+
+#: ../backend/file/qsf-backend.c:346
+#, c-format
+msgid ""
+"could not write to '%s'. That database may be on a read-only file system, or "
+"you may not have write permission for the directory.\n"
+msgstr ""
+"could not write to '%s'. That database may be on a read-only file system, or "
+"you may not have write permission for the directory.\n"
+
+#: ../backend/file/qsf-backend.c:505
+#, c-format
+msgid "There was an error parsing the file '%s'.\n"
+msgstr "There was an error parsing the file '%s'.\n"
+
+#: ../backend/file/qsf-backend.c:540 ../backend/file/qsf-backend.c:583
+#: ../backend/file/qsf-xml-map.c:260 ../backend/file/qsf-xml-map.c:282
+#: ../backend/file/qsf-xml-map.c:341 ../backend/file/qsf-xml.c:263
+#: ../backend/file/qsf-xml.c:322
+#, c-format
+msgid "There was an error parsing the file '%s'."
+msgstr "There was an error parsing the file '%s'."
+
+#: ../backend/file/qsf-backend.c:590
+#, c-format
+msgid "There was an error reading the file '%s'."
+msgstr "There was an error reading the file '%s'."
+
+#: ../backend/file/qsf-backend.c:622
+#, c-format
+msgid ""
+"The selected file '%s' is a QSF map and cannot be opened as a QSF object."
+msgstr ""
+"The selected file '%s' is a QSF map and cannot be opened as a QSF object."
+
+#: ../backend/file/qsf-backend.c:1179
+#, c-format
+msgid ""
+"Could not write to '%s'. Check that you have permission to write to this "
+"file and that there is sufficient space to create it."
+msgstr ""
+"Could not write to '%s'. Check that you have permission to write to this "
+"file and that there is sufficient space to create it."
+
+#: ../backend/file/qsf-backend.c:1469
 #, c-format
 msgid ""
 "The selected QSF object file '%s' contains one or more invalid GUIDs. The "
@@ -75,7 +136,7 @@ msgstr ""
 "The selected QSF object file '%s' contains one or more invalid GUIDs. The "
 "file cannot be processed - please check the source of the file and try again."
 
-#: ../backend/file/qsf-backend.c:1585
+#: ../backend/file/qsf-backend.c:1591
 #, c-format
 msgid ""
 "The selected QSF object file '%s' contains one or more invalid 'collect' "
@@ -86,7 +147,30 @@ msgstr ""
 "values. The file cannot be processed - please check the source of the file "
 "and try again."
 
-#: ../backend/file/qsf-xml-map.c:345
+#: ../backend/file/qsf-xml-map.c:253 ../backend/file/qsf-xml-map.c:334
+#: ../backend/file/qsf-xml.c:252 ../backend/file/qsf-xml.c:308
+#, c-format
+msgid "The QSF XML file '%s' could not be found."
+msgstr "The QSF XML file '%s' could not be found."
+
+#: ../backend/file/qsf-xml-map.c:266 ../backend/file/qsf-xml.c:269
+#: ../backend/file/qsf-xml.c:328
+#, c-format
+msgid ""
+"Invalid QSF Object file! The QSF object file '%s'  failed to validate  "
+"against the QSF object schema. The XML structure of the file is either not "
+"well-formed or the file contains illegal data."
+msgstr ""
+"Invalid QSF Object file! The QSF object file '%s'  failed to validate  "
+"against the QSF object schema. The XML structure of the file is either not "
+"well-formed or the file contains illegal data."
+
+#: ../backend/file/qsf-xml-map.c:275
+#, c-format
+msgid "The QSF map file '%s' could not be found."
+msgstr "The QSF map file '%s' could not be found."
+
+#: ../backend/file/qsf-xml-map.c:348
 msgid ""
 "Invalid QSF Map file! The QSF map file failed to validate against the QSF "
 "map schema. The XML structure of the file is either not well-formed or the "
@@ -96,7 +180,18 @@ msgstr ""
 "map schema. The XML structure of the file is either not well-formed or the "
 "file contains illegal data."
 
-#: ../backend/file/qsf-xml-map.c:508
+#: ../backend/file/qsf-xml-map.c:420
+#, c-format
+msgid ""
+"The selected QSF map '%s' contains unusable or missing data. This is usually "
+"because not all the required parameters for the defined objects have "
+"calculations described in the map."
+msgstr ""
+"The selected QSF map '%s' contains unusable or missing data. This is usually "
+"because not all the required parameters for the defined objects have "
+"calculations described in the map."
+
+#: ../backend/file/qsf-xml-map.c:514
 #, c-format
 msgid ""
 "The QSF Map file '%s' was written for a different version of QOF. It may "
@@ -110,36 +205,36 @@ msgstr ""
 msgid "GDA Provider '%s' could not be found"
 msgstr "GDA Provider '%s' could not be found"
 
-#: ../backend/gda/qof-gda.c:241
+#: ../backend/gda/qof-gda.c:242
 msgid "GDA: No data source path specified."
 msgstr "GDA: No data source path specified."
 
-#: ../backend/gda/qof-gda.c:258
+#: ../backend/gda/qof-gda.c:259
 msgid "GDA: Unable to locate your home directory."
 msgstr "GDA: Unable to locate your home directory."
 
-#: ../backend/gda/qof-gda.c:268
+#: ../backend/gda/qof-gda.c:270
 msgid "GDA: Unable to create a .libgda directory within your home directory."
 msgstr "GDA: Unable to create a .libgda directory within your home directory."
 
-#: ../backend/gda/qof-gda.c:304
+#: ../backend/gda/qof-gda.c:306
 #, c-format
 msgid "GDA encountered an error '%s' using data source '%s'."
 msgstr "GDA encountered an error '%s' using data source '%s'."
 
-#: ../backend/gda/qof-gda.c:477
+#: ../backend/gda/qof-gda.c:479
 msgid "Name of the database to use."
 msgstr "Name of the database to use."
 
-#: ../backend/gda/qof-gda.c:479
+#: ../backend/gda/qof-gda.c:481
 msgid "Override the default database name with a name of your own choice."
 msgstr "Override the default database name with a name of your own choice."
 
-#: ../backend/gda/qof-gda.c:488
+#: ../backend/gda/qof-gda.c:490
 msgid "The username to use to access this data source."
 msgstr "The username to use to access this data source."
 
-#: ../backend/gda/qof-gda.c:490
+#: ../backend/gda/qof-gda.c:492
 msgid ""
 "The username specified in the configuration of this data source that "
 "provides write access to the data."
@@ -147,19 +242,47 @@ msgstr ""
 "The username specified in the configuration of this data source that "
 "provides write access to the data."
 
-#: ../backend/gda/qof-gda.c:499
+#: ../backend/gda/qof-gda.c:501
 msgid "Password to use with the username."
 msgstr "Password to use with the username."
 
-#: ../backend/gda/qof-gda.c:501
+#: ../backend/gda/qof-gda.c:503
 msgid "The password that is to be used with the specified username."
 msgstr "The password that is to be used with the specified username."
 
-#: ../backend/gda/qof-gda.c:510
+#: ../backend/gda/qof-gda.c:512
 msgid "Name of this data source."
 msgstr "Name of this data source."
 
-#: ../backend/gda/qof-gda.c:512
+#: ../backend/gda/qof-gda.c:514
 msgid "The name of this data source as specified in the GDA configuration."
 msgstr "The name of this data source as specified in the GDA configuration."
 
+#: ../qof/qofsession.c:1030
+#, c-format
+msgid "Failed to load '%s'."
+msgstr "Failed to load '%s'."
+
+#: ../qof/qofsession.c:1067
+#, c-format
+msgid "Cannot parse the URL '%s'"
+msgstr "Cannot parse the URL '%s'"
+
+#: ../qof/qofsession.c:1080
+msgid "This book appears to be open already."
+msgstr "This book appears to be open already."
+
+#: ../qof/qofsession.c:1351 ../qof/qofsession.c:1388
+msgid "Failed to load backend, no suitable handler."
+msgstr "Failed to load backend, no suitable handler."
+
+#: ../qof/qofsql.c:755 ../qof/qofsql.c:782
+#, c-format
+msgid ""
+"When converting SQLite strings into numbers, an overflow has been detected. "
+"The SQLite database '%s' contains invalid data in a field that is meant to "
+"hold a number."
+msgstr ""
+"When converting SQLite strings into numbers, an overflow has been detected. "
+"The SQLite database '%s' contains invalid data in a field that is meant to "
+"hold a number."
